--- a/css/style.css
+++ b/css/style.css
@@ -7,9 +7,6 @@
 
 
 /* !COMMON */
-body {
-
-}
 :root {
     --debug-border: 1px dashed black;
 }
@@ -70,7 +67,7 @@ header {
 /* *common */
 .bar {
     justify-content: center;
-    padding: 30px;
+    padding: 30px 0;
 }
 
 /* *section blue */
@@ -113,10 +110,29 @@ div.violet {
     background-color: green;
     height: 500px;
 }
-.
+
 /* !FOOTER */
+footer {
+    padding-top: 10px;
+}
+footer > section{
+    margin: 0 auto;
+}
 
 /* column section debug */
 footer {
     background-color: black;
+
+}
+
+.coral{
+    background-color: coral;
+    flex-grow: 1;
+}
+.aquamarine {
+    background-color: aquamarine;
+    width: calc(100% / 6);
+    height: 300px;
+    border: 1px dashed white;
+    flex-shrink: 0;
 }
