--- a/css/style.css
+++ b/css/style.css
@@ -116,7 +116,7 @@ footer {
     padding-top: 10px;
 }
 footer > section{
-    margin: 0 auto;
+    margin: 0 auto 20px;
 }
 
 /* column section debug */
@@ -135,4 +135,25 @@ footer {
     height: 300px;
     border: 1px dashed white;
     flex-shrink: 0;
+}
+
+/* *bottom section */
+.border {
+    border-top: 1px solid white;
+    border-bottom: 1px solid white;
+    padding: 10px 0 0 0;
+}
+.banner {
+    background-color: aqua;
+    height: 2rem;
+    margin: 0 auto;
+    justify-content: space-between;
+    align-items: center;
+}
+/* bottom section debug */
+
+.rectangle {
+    background-color: orange;
+    border: var(--debug-border);
+    padding: 0 5px;
 }
